# lore

./: .gitignore  CMakeLists.txt  README.md
data/glass/: CDGM-IR.glc  CDGM.glc  corning.glc  hikari.glc  hoya.glc  misc.glc  obsolete001.glc  obsolete002.glc  obsolete003.glc  ohara.glc  pilkington.glc  schott.csv  schott.glc  schott_radhard.glc  shared.glc  sumita.glc  vitron.glc
data/lenses/: brendel-tessar.len  canon-zoom-long.len  canon-zoom-mid.len  canon-zoom-short.len  dgauss-angenieux.len  dgauss.len  dgauss2.len  dgauss3.len  fisheye.len  fraunhofer.len  gauss.len  hypergon.len  orthometar.len  petzval.len  petzval2.len  petzval3.len  retrofocus.len  retrofocus2.len  retrofocus3.len  richter.len  roossinov.len  simple.len  sonnar.len  split-triplet-2.len  split-triplet-3.len  split-triplet.len  steinheil.len  telephoto.len  telephoto2.len  telescope.len  tessar.len  tessar2.len  tessar3.len  testing.len  triplet-telescope.len  triplet.len  triplet2.len  wideangle.len  wideangle2.len
include/lore/: logging.h  lore.h  math.h
include/lore/analysis/: Paraxial.h  Petzval.h
include/lore/io/: LensReader.h
include/lore/lens/: Glass.h  GlassCatalog.h  Lens.h  LensElement.h  LensSchema.h  Material.h  Surface.h  SurfaceSchema.h
include/lore/optim/: FADFloat.h
src/: logging.cpp
src/io/: LensReader.cpp
src/lens/: GlassCatalog.cpp
tests/: CMakeLists.txt  math.cpp
tests/analysis/: Paraxial.cpp
tests/io/: LensReader.cpp
tests/lens/: GlassCatalog.cpp
tests/optim/: FADFloat.cpp
tests/rt/: ABCD.cpp  GeometricalIntersector.cpp  SequentialTrace.cpp  geometrical.cpp
(+5 files in other folders)
